--- a/src/views/SchedulePeriodView.fxml
+++ b/src/views/SchedulePeriodView.fxml
@@ -204,7 +204,7 @@
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
                   </Label>
-                  <Label fx:id="moduleNameLabel" layoutX="155.0" layoutY="67.0" prefHeight="83.0" prefWidth="139.0" style="-fx-wrap-text: true;" text="nameLabel" textFill="WHITE">
+                  <Label fx:id="eventNameLabel" layoutX="155.0" layoutY="67.0" prefHeight="83.0" prefWidth="139.0" style="-fx-wrap-text: true;" text="nameLabel" textFill="WHITE">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
@@ -214,7 +214,7 @@
                         <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
-                  <Label fx:id="descriptionLabel" layoutX="312.0" layoutY="67.0" prefHeight="83.0" prefWidth="339.0" style="-fx-wrap-text: true;" text="descriptionLabel" textFill="WHITE">
+                  <Label fx:id="eventDescriptionLabel" layoutX="312.0" layoutY="67.0" prefHeight="83.0" prefWidth="339.0" style="-fx-wrap-text: true;" text="descriptionLabel" textFill="WHITE">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
@@ -312,7 +312,7 @@
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
                   </Label>
-                  <Pane fx:id="mondayEventsPane" layoutX="196.0" layoutY="62.0" prefHeight="517.0" prefWidth="196.0">
+                  <Pane fx:id="mondayEventsPane" layoutX="196.0" layoutY="62.0" onMouseClicked="#mondayEventsPaneClicked" prefHeight="517.0" prefWidth="196.0">
                      <children>
                         <Label alignment="CENTER" prefHeight="64.0" prefWidth="196.0" style="-fx-wrap-text: true; -fx-background-radius: 10;" textFill="#2b2b2b">
                            <font>
@@ -366,7 +366,7 @@
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
                   </Label>
-                  <Pane fx:id="tuesdayEventsPane" layoutX="392.0" layoutY="62.0" prefHeight="517.0" prefWidth="196.0">
+                  <Pane fx:id="tuesdayEventsPane" layoutX="392.0" layoutY="62.0" onMouseClicked="#tuesdayEventsPaneClicked" prefHeight="517.0" prefWidth="196.0">
                      <children>
                         <Label alignment="CENTER" prefHeight="64.0" prefWidth="196.0" style="-fx-wrap-text: true; -fx-background-radius: 10;" textFill="#2b2b2b">
                            <font>
@@ -420,7 +420,7 @@
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
                   </Label>
-                  <Pane fx:id="wednesdayEventsPane" layoutX="588.0" layoutY="62.0" prefHeight="517.0" prefWidth="196.0">
+                  <Pane fx:id="wednesdayEventsPane" layoutX="588.0" layoutY="62.0" onMouseClicked="#wednesdayEventsPaneClicked" prefHeight="517.0" prefWidth="196.0">
                      <children>
                         <Label alignment="CENTER" prefHeight="64.0" prefWidth="196.0" style="-fx-wrap-text: true; -fx-background-radius: 10;" textFill="#2b2b2b">
                            <font>
@@ -474,7 +474,7 @@
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
                   </Label>
-                  <Pane fx:id="thursdayEventsPane" layoutX="784.0" layoutY="62.0" prefHeight="517.0" prefWidth="196.0">
+                  <Pane fx:id="thursdayEventsPane" layoutX="784.0" layoutY="62.0" onMouseClicked="#thursdayEventsPaneClicked" prefHeight="517.0" prefWidth="196.0">
                      <children>
                         <Label alignment="CENTER" prefHeight="64.0" prefWidth="196.0" style="-fx-wrap-text: true; -fx-background-radius: 10;" textFill="#2b2b2b">
                            <font>
@@ -528,7 +528,7 @@
                         <Font name="Arial Rounded MT Bold" size="23.0" />
                      </font>
                   </Label>
-                  <Pane fx:id="fridayEventsPane" layoutX="980.0" layoutY="62.0" prefHeight="517.0" prefWidth="196.0">
+                  <Pane fx:id="fridayEventsPane" layoutX="980.0" layoutY="62.0" onMouseClicked="#fridayEventsPaneClicked" prefHeight="517.0" prefWidth="196.0">
                      <children>
                         <Label alignment="CENTER" prefHeight="64.0" prefWidth="196.0" style="-fx-wrap-text: true; -fx-background-radius: 10;" textFill="#2b2b2b">
                            <font>
