--- a/src/views/SchedulePopupViewRecurringEvent.fxml
+++ b/src/views/SchedulePopupViewRecurringEvent.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#mouseDraggedPopup" onMousePressed="#mousePressed" prefHeight="800.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SchedulePopupEventController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#mouseDraggedPopup" onMousePressed="#mousePressed" prefHeight="800.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SchedulePopupRecurringEventController">
    <Pane layoutX="4.0" layoutY="4.0" prefHeight="793.0" prefWidth="693.0" style="-fx-background-color: #2B2B2B;">
       <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="659.0" layoutY="7.0" onMouseClicked="#closeClicked" onMouseEntered="#closeHovered" onMouseExited="#closeExited" pickOnBounds="true">
          <Image url="@../images/close_icon.png" />
@@ -18,13 +18,13 @@
       <ImageView fx:id="minimizeButton" fitHeight="29.0" fitWidth="27.0" layoutX="632.0" layoutY="7.0" onMouseClicked="#minimizeClicked" onMouseEntered="#minimizeHovered" onMouseExited="#minimizeExited" pickOnBounds="true">
          <Image url="@../images/minimize_icon.png" />
       </ImageView>
-      <Label fx:id="titleLabel" layoutX="79.0" layoutY="36.0" prefHeight="69.0" prefWidth="269.0" text="Word Event." textFill="WHITE">
+      <Label layoutX="79.0" layoutY="35.0" prefHeight="57.0" prefWidth="381.0" text="Add Recurring Event." textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="35.0" />
          </font>
       </Label>
-      <Line endX="421.0" layoutX="180.0" layoutY="105.0" startX="-100.0" stroke="#e6bb9a" strokeWidth="3.0" />
-      <Pane layoutX="78.0" layoutY="128.0" prefHeight="57.0" prefWidth="538.0">
+      <Line endX="421.0" layoutX="180.0" layoutY="96.0" startX="-100.0" stroke="#e6bb9a" strokeWidth="3.0" />
+      <Pane layoutX="76.0" layoutY="108.0" prefHeight="57.0" prefWidth="538.0">
          <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Day of Week of Event:" textFill="WHITE">
             <font>
                <Font name="Arial Rounded MT Bold" size="25.0" />
@@ -32,7 +32,7 @@
          </Label>
          <ComboBox fx:id="dayOfWeekComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select Day:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
       </Pane>
-      <Pane layoutX="79.0" layoutY="185.0" prefHeight="57.0" prefWidth="538.0">
+      <Pane layoutX="77.0" layoutY="165.0" prefHeight="57.0" prefWidth="538.0">
          <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Associated Module:" textFill="WHITE">
             <font>
                <Font name="Arial Rounded MT Bold" size="25.0" />
@@ -40,7 +40,7 @@
          </Label>
          <ComboBox fx:id="associatedModuleComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select Module:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
       </Pane>
-      <Pane layoutX="79.0" layoutY="242.0" prefHeight="57.0" prefWidth="538.0">
+      <Pane layoutX="77.0" layoutY="222.0" prefHeight="57.0" prefWidth="538.0">
          <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Name:" textFill="WHITE">
             <font>
                <Font name="Arial Rounded MT Bold" size="25.0" />
@@ -52,7 +52,7 @@
             </font>
          </TextField>
       </Pane>
-      <Pane layoutX="79.0" layoutY="299.0" prefHeight="57.0" prefWidth="538.0">
+      <Pane layoutX="77.0" layoutY="279.0" prefHeight="57.0" prefWidth="538.0">
          <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Start Time:" textFill="WHITE">
             <font>
                <Font name="Arial Rounded MT Bold" size="25.0" />
@@ -60,7 +60,7 @@
          </Label>
          <ComboBox fx:id="startTimeComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select Start Time:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
       </Pane>
-      <Pane layoutX="80.0" layoutY="356.0" prefHeight="57.0" prefWidth="538.0">
+      <Pane layoutX="78.0" layoutY="336.0" prefHeight="57.0" prefWidth="538.0">
          <children>
             <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="End Time:" textFill="WHITE">
                <font>
@@ -70,14 +70,34 @@
             <ComboBox fx:id="endTimeComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select End Time:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
          </children>
       </Pane>
-      <Pane layoutX="78.0" layoutY="420.0" prefHeight="175.0" prefWidth="538.0">
+      <Pane layoutX="78.0" layoutY="393.0" prefHeight="57.0" prefWidth="538.0">
+         <children>
+            <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Start Week:" textFill="WHITE">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="25.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="startWeekComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select Start Week:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
+         </children>
+      </Pane>
+      <Pane layoutX="79.0" layoutY="450.0" prefHeight="57.0" prefWidth="538.0">
+         <children>
+            <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="End Week:" textFill="WHITE">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="25.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="endWeekComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select End Week:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
+         </children>
+      </Pane>
+      <Pane layoutX="76.0" layoutY="510.0" prefHeight="175.0" prefWidth="538.0">
          <children>
             <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Description:" textFill="WHITE">
                <font>
                   <Font name="Arial Rounded MT Bold" size="25.0" />
                </font>
             </Label>
-            <TextArea fx:id="descriptionField" layoutX="300.0" layoutY="3.0" prefHeight="167.0" prefWidth="224.0" promptText="e.g. Synchronous Organisation Session " style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white; -fx-wrap-text: true;" stylesheets="@../stylesheets/textAreaStyling.css">
+            <TextArea fx:id="descriptionField" layoutX="300.0" layoutY="4.0" prefHeight="167.0" prefWidth="224.0" promptText="e.g. Synchronous Organisation Session " style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white; -fx-wrap-text: true;" stylesheets="@../stylesheets/textAreaStyling.css">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
@@ -89,27 +109,17 @@
             </Label>
          </children>
       </Pane>
-      <Pane fx:id="actionButton" layoutX="269.0" layoutY="645.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="63.0" prefWidth="161.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
+      <Pane fx:id="actionButton" layoutX="260.0" layoutY="714.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="63.0" prefWidth="161.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
          <ImageView fx:id="actionButtonImage" fitHeight="35.0" fitWidth="35.0" layoutX="19.0" layoutY="14.0">
-            <Image url="@../images/more_icon.png" />
+            <Image url="@../images/add_icon.png" />
          </ImageView>
-         <Label fx:id="actionButtonLabel" alignment="CENTER" layoutX="54.0" layoutY="14.0" prefHeight="36.0" prefWidth="88.0" style="-fx-wrap-text: true;" text="Word" textFill="#e6bb9a">
+         <Label fx:id="actionButtonLabel" alignment="CENTER" layoutX="54.0" layoutY="14.0" prefHeight="36.0" prefWidth="88.0" style="-fx-wrap-text: true;" text="Add" textFill="#e6bb9a">
             <font>
                <Font name="Arial Rounded MT Bold" size="22.0" />
             </font>
          </Label>
       </Pane>
-      <Pane fx:id="deleteButton" layoutX="269.0" layoutY="716.0" onMouseClicked="#deleteButtonClicked" onMouseEntered="#deleteButtonHovered" onMouseExited="#deleteButtonExited" prefHeight="63.0" prefWidth="161.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
-         <ImageView fx:id="deleteButtonImage" fitHeight="35.0" fitWidth="35.0" layoutX="19.0" layoutY="15.0">
-            <Image url="@../images/delete_icon.png" />
-         </ImageView>
-         <Label fx:id="deleteButtonLabel" alignment="CENTER" layoutX="54.0" layoutY="14.0" prefHeight="36.0" prefWidth="88.0" style="-fx-wrap-text: true;" text="Delete" textFill="#e6bb9a">
-            <font>
-               <Font name="Arial Rounded MT Bold" size="22.0" />
-            </font>
-         </Label>
-      </Pane>
-      <Label fx:id="errorMessageField" alignment="CENTER" layoutX="79.0" layoutY="603.0" prefHeight="29.0" prefWidth="524.0" textFill="WHITE">
+      <Label fx:id="errorMessageField" alignment="CENTER" layoutX="79.0" layoutY="685.0" prefHeight="22.0" prefWidth="524.0" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="16.0" />
          </font>
